--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -11,6 +11,10 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+a {
+  text-decoration: none;
+}
+
 button {
   border: none;
   cursor: pointer;
