--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 @mixin break($breakpoint) {
   @media screen and (max-width: $breakpoint - 1px) {
     @content;
@@ -5,6 +7,6 @@
 }
 
 @function toRem($value) {
-  $remValue: ($value / 16) + rem;
+  $remValue: math.div($value, 16) + rem;
   @return $remValue;
 }
