--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,4 +1,25 @@
 body {
   font-family: $font-primary;
-  font-size: toRem(16);
+  font-size: toRem(18);
+  line-height: 1.6;
+  color: #111;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: toRem(52);
+  font-weight: 700;
+}
+
+h2 {
+  font-size: toRem(44);
+  font-weight: 700;
 }
