--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -23,3 +23,13 @@ h2 {
   font-size: toRem(44);
   font-weight: 700;
 }
+
+h3 {
+  font-size: toRem(32);
+  font-weight: 700;
+}
+
+h4 {
+  font-size: toRem(18);
+  font-weight: 400;
+}
