fix(master): markup fixes

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,5 +17,6 @@ $transition-slow: .4s ease-out;
 $blue: #007aff;
 $red: #f36163;
 $dark: #1d222d;
+$dark-500: rgba($dark, .5);
 $white: #fff;
 $black: #000;
