--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -6,6 +6,12 @@
   }
 }
 
+@mixin hover {
+  @media screen and (hover: hover) {
+    @content;
+  }
+}
+
 @function toRem($value) {
   $remValue: math.div($value, 16) + rem;
   @return $remValue;
