--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -17,6 +17,10 @@ h6 {
 h1 {
   font-size: toRem(52);
   font-weight: 700;
+
+  @include break($md) {
+    font-size: toRem(32);
+  }
 }
 
 h2 {
@@ -27,6 +31,10 @@ h2 {
 h3 {
   font-size: toRem(32);
   font-weight: 700;
+
+  @include break($md) {
+    font-size: toRem(24);
+  }
 }
 
 h4 {
